Added google conf

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,3 +22,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  google_client_id: 490121800874-4bjr5vls55ii2ar5s0coh96rvm1g40k7.apps.googleusercontent.com
+  google_client_secret: iQy2VMELqjLCsfEUjXZVrfB4
